--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=360, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>GOQii Health Consultation</title>
     <style>
         * {
             -webkit-tap-highlight-color: transparent;
             box-sizing: border-box;
+            margin: 0;
+            padding: 0;
         }
         body {
-            margin: 0;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             display: flex;
             flex-direction: column;
@@ -18,11 +19,12 @@
             justify-content: center;
             height: 100vh;
             background: #f5f5f5;
+            overflow: hidden;
         }
         .booking-container {
             width: 100%;
             max-width: 360px;
-            background: rgba(255, 255, 255, 0.6);
+            background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 12px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -38,7 +40,7 @@
             bottom: 0;
             background: url('./image.jpg') no-repeat center center;
             background-size: cover;
-            filter: none;
+            filter: brightness(0.8);
             z-index: -1;
             border-radius: 12px;
         }
@@ -46,19 +48,20 @@
             width: 150px;
             height: auto;
             margin-bottom: 15px;
-            opacity: 1;
             background: transparent;
         }
         .hero-title {
             font-size: 20px;
             font-weight: bold;
             color: #000;
+            text-align: left;
         }
         .hero-subtitle {
             font-size: 14px;
             color: #000;
             font-weight: 400;
             margin-bottom: 20px;
+            text-align: left;
         }
         .form-group {
             text-align: left;
@@ -94,10 +97,8 @@
             border-radius: 6px;
             cursor: pointer;
             width: 100%;
-            text-decoration: none;
+            margin-top: 10px;
             display: block;
-            text-align: center;
-            margin-top: 8px;
         }
         .book-button:hover {
             background-color: #45a049;
@@ -127,7 +128,7 @@
                 <label for="time">Preferred Time</label>
                 <select id="time" name="time" required></select>
             </div>
-            <a href="your-payment-link" class="book-button">Book & Pay Now</a>
+            <button type="submit" class="book-button">Book & Pay Now</button>
         </form>
     </div>
 
