--- a/index.html
+++ b/index.html
@@ -18,50 +18,32 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: #f5f5f5;
-            overflow: hidden;
+            background: url('your-image.jpg') no-repeat center center;
+            background-size: cover;
         }
         .booking-container {
-            width: 100%;
+            width: 90%;
             max-width: 360px;
-            background: rgba(255, 255, 255, 0.8);
+            background: rgba(255, 255, 255, 0.7);
             padding: 20px;
             border-radius: 12px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            text-align: right;
-            position: relative;
-        }
-        .booking-container::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: url('./image.jpg') no-repeat center center;
-            background-size: cover;
-            filter: brightness(0.8);
-            z-index: -1;
-            border-radius: 12px;
+            text-align: center;
         }
         .logo {
             width: 150px;
             height: auto;
             margin-bottom: 15px;
-            background: transparent;
         }
         .hero-title {
             font-size: 20px;
             font-weight: bold;
             color: #000;
-            text-align: left;
         }
         .hero-subtitle {
             font-size: 14px;
             color: #000;
-            font-weight: 400;
             margin-bottom: 20px;
-            text-align: left;
         }
         .form-group {
             text-align: left;
@@ -74,18 +56,13 @@
             margin-bottom: 4px;
             color: #000;
         }
-        .form-group select, .form-group input {
+        .form-group input, .form-group select {
             width: 100%;
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 6px;
             font-size: 14px;
             background: #fff;
-        }
-        .form-group input:focus, .form-group select:focus {
-            outline: none;
-            border-color: #4CAF50;
-            background: white;
         }
         .book-button {
             background-color: #4CAF50;
@@ -97,11 +74,9 @@
             border-radius: 6px;
             cursor: pointer;
             width: 100%;
-            margin-top: 10px;
+            text-align: center;
             display: block;
-        }
-        .book-button:hover {
-            background-color: #45a049;
+            margin-top: 8px;
         }
     </style>
 </head>
@@ -128,55 +103,8 @@
                 <label for="time">Preferred Time</label>
                 <select id="time" name="time" required></select>
             </div>
-            <button type="submit" class="book-button">Book & Pay Now</button>
+            <a href="your-payment-link" class="book-button">Book & Pay Now</a>
         </form>
     </div>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            let dateInput = document.getElementById("date");
-            let timeSelect = document.getElementById("time");
-            
-            function updateAvailableTimes() {
-                let now = new Date();
-                let selectedDate = new Date(dateInput.value);
-                let currentTime = now.getHours() * 60 + now.getMinutes();
-                let cutoffTime = 14 * 60;
-
-                timeSelect.innerHTML = "";
-                let startTime = 10 * 60;
-                let endTime = 18 * 60;
-
-                if (selectedDate.toDateString() === now.toDateString() && currentTime > cutoffTime) {
-                    selectedDate.setDate(selectedDate.getDate() + 1);
-                    dateInput.value = selectedDate.toISOString().split("T")[0];
-                }
-
-                for (let t = startTime; t <= endTime; t += 30) {
-                    let hours = Math.floor(t / 60);
-                    let minutes = t % 60;
-                    let ampm = hours >= 12 ? "PM" : "AM";
-                    hours = hours > 12 ? hours - 12 : hours;
-                    if (hours === 0) hours = 12;
-
-                    let timeString = `${hours}:${minutes.toString().padStart(2, '0')} ${ampm}`;
-                    let option = document.createElement("option");
-                    option.value = timeString;
-                    option.textContent = timeString;
-                    timeSelect.appendChild(option);
-                }
-            }
-
-            let now = new Date();
-            let minDate = now.toISOString().split("T")[0];
-            let maxDate = new Date(now.setDate(now.getDate() + 7)).toISOString().split("T")[0];
-            dateInput.setAttribute("min", minDate);
-            dateInput.setAttribute("max", maxDate);
-            dateInput.value = minDate;
-
-            updateAvailableTimes();
-            dateInput.addEventListener("change", updateAvailableTimes);
-        });
-    </script>
 </body>
 </html>
