--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: url('your-image.jpg') no-repeat center center;
+            background: url('image.jpg') no-repeat center center;
             background-size: cover;
         }
         .booking-container {
