--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: #f5f5f5;
+            background: url('your-image.jpg') no-repeat center center/cover;
         }
         .booking-container {
             width: 100%;
