--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: url('./image.jpg') no-repeat center center;
+    background: url('./image_change.jpg') no-repeat center center;
     background-size: cover;
-    transform: scaleX(-1);
     filter: none;
     z-index: -1;
     border-radius: 12px;
